# chatbot-with-langgraph

./: README.md
.github/workflows/: ci.yml  keep-alive.yml
backend/: .dockerignore  .gitignore  Dockerfile  check_db.py  pyproject.toml  sitecustomize.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/core/: chroma.py  config.py  database.py  graph_setup.py  llm.py  pinecone.py  s3.py  security.py
backend/app/dependencies/: get_db.py  get_user.py  token_limit.py
backend/app/graphs/: chat_graph.py
backend/app/models/: models.py
backend/app/routers/: auth.py  chatbot.py  document.py  user.py
backend/app/schemas/: auth_schema.py  chat_schema.py  document_schema.py
backend/app/services/: document_services.py
backend/app/utils/: embeddings.py  generate_title.py  paginate.py  store.py  token_limit.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/signup/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: app-sidebar.tsx  chat-window.tsx  chats.tsx  documents-pagination.tsx  file-uploader.tsx
frontend/components/dashboard/: dashboard-header.tsx  memory-highlights-card.tsx  profile-card.tsx  recent-chats-card.tsx  recent-documents-card.tsx  stat-card.tsx  stats-overview.tsx  token-usage-card.tsx
frontend/components/ui/: alert-dialog.tsx  progress.tsx
frontend/lib/: api.ts
frontend/schemas/: auth.schema.ts  chat.schema.ts
frontend/store/: authStore.tsx  chatStore.tsx  docStore.tsx
frontend/utils/: isAuth.tsx
(+4 files in other folders)
