[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "boto3>=1.43.36",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.138.1",
    "fastapi-throttle>=0.1.8",
    "fastembed>=0.4.2",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pinecone>=9.1.0",
    "psycopg-pool>=3.3.1",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "pypdf>=6.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
